--- a/api/sss.env
+++ b/api/sss.env
@@ -20,7 +20,7 @@ FILES_URL=http://localhost:5001
 # INTERNAL_FILES_URL is used for plugin daemon communication within Docker network.
 # Set this to the internal Docker service URL for proper plugin file access.
 # Example: INTERNAL_FILES_URL=http://api:5001
-INTERNAL_FILES_URL=http://192.168.31.250:5001
+INTERNAL_FILES_URL=http://127.0.0.1:5001
 
 # The time in seconds after the signature is rejected
 FILES_ACCESS_TIMEOUT=300
@@ -32,7 +32,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # redis configuration
-REDIS_HOST=192.168.31.250
+REDIS_HOST=101.126.80.22
 REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=difyai123456
@@ -53,12 +53,12 @@ REDIS_CLUSTERS=
 REDIS_CLUSTERS_PASSWORD=
 
 # celery configuration
-CELERY_BROKER_URL=redis://:difyai123456@localhost:${REDIS_PORT}/1
+CELERY_BROKER_URL=redis://:difyai123456@101.126.80.22:${REDIS_PORT}/1
 CELERY_BACKEND=redis
 # PostgreSQL database configuration
 DB_USERNAME=postgres
 DB_PASSWORD=difyai123456
-DB_HOST=192.168.31.250
+DB_HOST=101.126.80.22
 DB_PORT=5432
 DB_DATABASE=dify
 
@@ -148,7 +148,7 @@ VECTOR_STORE=weaviate
 VECTOR_INDEX_NAME_PREFIX=Vector_index
 
 # Weaviate configuration
-WEAVIATE_ENDPOINT=http://192.168.31.250:8080
+WEAVIATE_ENDPOINT=http://101.126.80.22:8080
 WEAVIATE_API_KEY=WVF5YThaHlkYwhGUSmCRgsX3tD5ngdN8pkih
 WEAVIATE_GRPC_ENABLED=false
 WEAVIATE_BATCH_SIZE=100
@@ -382,8 +382,8 @@ UNSTRUCTURED_API_KEY=
 SCARF_NO_ANALYTICS=true
 
 #ssrf
-SSRF_PROXY_HTTP_URL=http://192.168.31.250:3128
-SSRF_PROXY_HTTPS_URL=http://192.168.31.250:3128
+SSRF_PROXY_HTTP_URL=
+SSRF_PROXY_HTTPS_URL=
 SSRF_DEFAULT_MAX_RETRIES=3
 SSRF_DEFAULT_TIME_OUT=5
 SSRF_DEFAULT_CONNECT_TIME_OUT=5
@@ -397,7 +397,7 @@ KEYWORD_DATA_SOURCE_TYPE=database
 WORKFLOW_FILE_UPLOAD_LIMIT=10
 
 # CODE EXECUTION CONFIGURATION
-CODE_EXECUTION_ENDPOINT=http://192.168.31.250:8194
+CODE_EXECUTION_ENDPOINT=http://101.126.80.22:8194
 CODE_EXECUTION_API_KEY=dify-sandbox
 CODE_MAX_NUMBER=9223372036854775807
 CODE_MIN_NUMBER=-9223372036854775808
@@ -492,9 +492,9 @@ POSITION_PROVIDER_EXCLUDES=
 
 # Plugin configuration
 PLUGIN_DAEMON_KEY=lYkiYYT6owG+71oLerGzA7GXCgOT++6ovaezWAjpCjf+Sjc3ZtU+qUEi
-PLUGIN_DAEMON_URL=http://192.168.31.250:5002
+PLUGIN_DAEMON_URL=http://101.126.80.22:5002
 PLUGIN_REMOTE_INSTALL_PORT=5003
-PLUGIN_REMOTE_INSTALL_HOST=192.168.31.250
+PLUGIN_REMOTE_INSTALL_HOST=101.126.80.22
 PLUGIN_MAX_PACKAGE_SIZE=15728640
 INNER_API_KEY_FOR_PLUGIN=QaHbTe77CtuXmsfyhR7+vRjI/+XbV1AaFy691iy+kGDv2Jvy0/eAh8Y1
 
@@ -503,7 +503,7 @@ MARKETPLACE_ENABLED=true
 MARKETPLACE_API_URL=https://marketplace.dify.ai
 
 # Endpoint configuration
-ENDPOINT_URL_TEMPLATE=http://localhost:5002/e/{hook_id}
+ENDPOINT_URL_TEMPLATE=http://101.126.80.22:5002/e/{hook_id}
 
 # Reset password token expiry minutes
 RESET_PASSWORD_TOKEN_EXPIRY_MINUTES=5
