--- a/web/package.json
+++ b/web/package.json
@@ -19,8 +19,11 @@
   ],
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev:build": "pnpm build && pnpm start:local",
+    "dev:fast": "node scripts/dev-fast.js",
     "build": "next build",
-    "start": "cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public && cross-env PORT=$npm_config_port HOSTNAME=$npm_config_host node .next/standalone/server.js",
+    "start": "cross-env PORT=$npm_config_port HOSTNAME=$npm_config_host next start",
+    "start:local": "cross-env NODE_ENV=production PORT=3000 next start",
     "lint": "pnpx oxlint && pnpm eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache",
     "lint-only-show-error": "pnpx oxlint && pnpm eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache --quiet",
     "fix": "next lint --fix",
